[build-system]
requires = ["setuptools>=80.9.0", "Cython>=0.29.2", "numpy>=1.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "2508-sr-cnn"
version = "0.1.0"
description = "SR-CNN based anomaly detection system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Cython>=0.29.2",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.50.0",
    "scikit-learn>=0.24.0",
    "setuptools>=80.9.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "cython>=3.1.3",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
